--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,63 @@ footer {
   padding: 10px;
   margin-top: 10px;
 }
+
+#shoes:hover {
+  transform: scale(1.05);
+}
+
+/* Estilos responsivos */
+@media screen and (max-width: 768px) {
+ 
+    .card-shoes {
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+        width: 90%;
+        margin: 0 auto; 
+      }
+    
+      #shoes {
+        flex: 0 0 100%; 
+        margin-bottom: 20px; /
+      }
+    }
+  
+  
+
+
+@media screen and (max-width: 576px) {
+  .topo-jordan {
+    height: 300px; 
+    font-size: 25px; 
+    padding: 0 5%; 
+  }
+
+  .topo-jordan p {
+    font-size: 16px; 
+  }
+
+  .card-shoes {
+    width: 90%;
+  }
+
+  #shoes {
+    flex: 0 0 calc(50% - 20px); 
+  }
+}
+
+
+@media screen and (max-width: 576px) {
+  .card-shoes {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    width: 90%; 
+    margin: 0 auto; 
+  }
+
+  #shoes {
+    flex: 0 0 100%; 
+    margin-bottom: 20px; /
+  }
+}
